# miraway-ai-agent-framework

./: .gitignore  README.md  pyproject.toml
.pytest_cache/v/cache/: nodeids
.ruff_cache/0.15.15/: 4212523433557927821  6086870861414715167  6459635530108718891
src/miraway_ai_agent_framework/: __init__.py  __main__.py  agent.py  cli.py  tool.py
src/miraway_ai_agent_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_agent.py
